fix: I fixed the confetti and the reuseable modal's alignment, feat: I added the leaderboard route, though still working on most of the responsive parts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,39 +7,43 @@
 @tailwind utilities;
 
 * {
-  font-family: "Poppins", sans-serif;
-  scrollbar-width: none;
+	font-family: "Poppins", sans-serif;
+	scrollbar-width: none;
 }
 
 :root {
-  background-color: #181818;
-  color: rgba(255, 255, 255, 0.87);
-  color-scheme: light dark;
-  font-family: "Poppins", sans-serif;
-  font-synthesis: none;
-  font-weight: 400;
-  line-height: 1.5;
-  text-rendering: optimizeLegibility;
+	background-color: #181818;
+	color: rgba(255, 255, 255, 0.87);
+	color-scheme: light dark;
+	font-family: "Poppins", sans-serif;
+	font-synthesis: none;
+	font-weight: 400;
+	line-height: 1.5;
+	text-rendering: optimizeLegibility;
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    background-color: #f8f8f8;
-    color: #181818;
-  }
+	:root {
+		background-color: #f8f8f8;
+		color: #181818;
+	}
 }
 
 @layer base {
-  :root {
-    --radius: 0.5rem;
-  }
+	:root {
+		--radius: 0.5rem;
+	}
 }
 
 .sidebar-link.active {
-  background: #4f4f4f;
+	background: #4f4f4f;
 }
 
+.dashboard_link.active {
+	background: #293249;
+	box-shadow: 0px 4px 12px rgba(50, 50, 50, 0.3);
+}
